--- a/index.html
+++ b/index.html
@@ -3,26 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>vue-admin</title>
+    <title>123</title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0, minimum-scale=1.0, width=device-width">
 </head>
 
 <body>
-    <div id="app">
-        <div>
-            <ul>
-                <li>
-                    <router-link to="/">home</router-link>
-                </li>
-                <li>
-                    <router-link to="/fir">first</router-link>
-                </li>
-                <li>
-                    <router-link to="/sec">sec</router-link>
-                </li>
-            </ul>
-            <router-view class="view one"></router-view>
-        </div>
-    </div>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
 </body>
 
 </html>
